--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
 
   "scripts": {
     "start": "node index.js",
-    "test": "runtests"
+    "test": "runtests",
+    "postinstall": "ng build --aot -prod"
   },
-  
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bensteria/bn-webskjema.git"
@@ -23,6 +24,12 @@
   },
   "homepage": "https://github.com/bensteria/bn-webskjema#readme",
   "dependencies": {
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "@angular/compiler-cli": "^4.2.4",
+    "@angular/cli":"1.1.3"
+  },
+  "engines": {
+    "node": "6.9.2",
+    "npm": "5.0.4"
   }
 }
