--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "express": "^4.15.3",
     "@angular/compiler-cli": "^4.2.4",
-    "@angular/cli":"1.1.3"
+    "@angular/cli":"1.1.3",
+    "@angular/core":"4.2.4"
   },
   "engines": {
     "node": "6.9.2",
