--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
   },
   "homepage": "https://github.com/bensteria/bn-webskjema#readme",
   "dependencies": {
-    "express": "^4.15.3",
-    "@angular/compiler-cli": "^4.2.4",
     "@angular/cli": "1.1.3",
-    "@angular/core": "4.2.4"
+    "@angular/compiler-cli": "^4.2.4",
+    "@angular/core": "4.2.4",
+    "express": "^4.15.3",
+    "materialize-css": "^0.99.0"
   },
   "engines": {
     "node": "6.9.2",
